【application.properties】 建立DB連線 設定敏感參數吃外部設定檔
【User.java / UserRepo.java】
測試JPA 功能是否正常，未來位在修改

--- a/mallVoyager/src/main/resources/application.properties
+++ b/mallVoyager/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=mallVoyager
+
+
+
+-------------DB connection Information
+
+# DBsource URL
+spring.datasource.url=jdbc:mysql://localhost:3306/mallVoyager?useSSL=false&serverTimezone=UTC
+
+spring.config.import=file:.env[.properties]
+
+# DB user info
+spring.datasource.username=root
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+# JDBC driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate JPA config
+# optional none?validate?update?create?create-drop
+spring.jpa.hibernate.ddl-auto=none  
+# show SQL syntax
+spring.jpa.show-sql=true
