--- a/mallVoyager/src/main/resources/application.properties
+++ b/mallVoyager/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none  
 # show SQL syntax
 spring.jpa.show-sql=true
+
+
+
+spring.jackson.default-property-inclusion=non_null
